prevent button labels from linewrapping

--- a/packages/client/hmi-client/src/assets/css/style.scss
+++ b/packages/client/hmi-client/src/assets/css/style.scss
@@ -99,9 +99,10 @@
 		color: var(--text-color-secondary);
 	}
 
-	/* Make button labels regular font weight */
+	/* Make button labels regular font weight and whitespace nowrap */
 	.p-button-label {
 		font-weight: var(--font-weight);
+		white-space: nowrap;
 	}
 
 	/* Make tab font size same as body */
